# patterntree

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
clusters/: cluster_c18g.json  cluster_c18g_simple.json
clusters/CPU/: cpu_platinum_8160.json  socket_platinum_8160.json
clusters/GPU/: gpu_tesla_v100.json  gpu_tesla_v100_simple.json  sm_tesla_v100.json  sm_tesla_v100_simple.json
clusters/Nodes/: node_c18g.json  node_c18g_simple.json
patterntree/: CMakeLists.txt
patterntree/src/api/: arithmetic.h
patterntree/src/apt/: apt.cpp  apt.h  step.cpp  step.h
patterntree/src/cluster/: cluster.cpp  cluster.h  device.cpp  device.h  node.cpp  node.h  processor.cpp  processor.h  team.cpp  team.h
patterntree/src/data/: data.cpp  data.h  data_concepts.h  value.cpp  value.h  view.cpp  view.h
patterntree/src/data/backend/: kokkos_value.cpp  kokkos_value.h  symbolic_value.cpp  symbolic_value.h
patterntree/src/optimization/: optimizer.h
patterntree/src/patterns/: map.h  pattern.cpp  pattern.h  pattern_split.cpp  pattern_split.h
patterntree/src/performance/: dataflow_state.cpp  dataflow_state.h  performance_model.h  roofline_model.cpp  roofline_model.h
patterntree/test/: CMakeLists.txt  algorithms.cpp  unittests.cpp
patterntree/test/algorithms/: jacobi.cpp  kmeans.cpp  monte_carlo.cpp
patterntree/test/unittests/: helper.h
patterntree/test/unittests/apt/: apt_test.cpp  happens_before_test.cpp  step_mapping_test.cpp  synchronization_efficiency_test.cpp
patterntree/test/unittests/cluster/: cluster_test.cpp
patterntree/test/unittests/data/: data_test.cpp  disjoint_test.cpp  value_test.cpp  view_test.cpp
patterntree/test/unittests/patterns/: map_test.cpp  pattern_split_test.cpp
patterntree/test/unittests/performance/: dataflow_state_test.cpp  roofline_model_test.cpp
samples/: CMakeLists.txt  jacobi.cpp  kmeans.cpp  mandelbrot.cpp  mxv.cpp
samples/c/: mxm_hybrid.cu
